Implement group management features including group creation, member management, and invitation system. Add Docker support for testing and update requirements. Introduce new test scripts and enhance user management endpoints. Update .gitignore for better environment handling.

--- a/backend2/pytest.ini
+++ b/backend2/pytest.ini
@@ -1,3 +1,8 @@
+[pytest]
+addopts = -q --tb=short --maxfail=1
+log_cli = false
+console_output_style = progress
+testpaths = tests
 [tool:pytest]
 testpaths = tests
 python_files = test_*.py
